--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+/* .hello{
+  color:red;
+  font-size: 50px;
+  font-style: italic;
+  font-weight: bold;
+} */
